--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2024-05:</b> 2 papers on causal representation learning are accepted by <a href="https://icml.cc/">ICML'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2024-02:</b> 1 paper on video understanding is accepted by <a href="https://cvpr.thecvf.com/">CVPR'2024</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -488,6 +491,19 @@ https://templatemo.com/tm-531-reflux
                     <div class="left">
                         <p>
                             <ul id="list">
+                                <li style="margin: 5px;">
+                                    <strong>Guangyi Chen</strong>*, Yifan Shen*, Zhenhao Chen*, Xiangchen Song, Yuewen Sun, Weiran Yao, Xiao Liu, Kun Zhang,
+                                    <a href="https://arxiv.org/abs/2401.14535"> CaRiNG: Learning Temporal Causal Representation under Non-Invertible Generation Process</a>,
+                                    <em> International Conference on Machine Learning (<strong>ICML</strong>)</em>, 2024.
+                                    <a href="https://github.com/sanshuiii/CaRiNG">[Code]</a>
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Yuke Li*, <strong>Guangyi Chen</strong>*, Xiao Liu, Zijian Li, Eman Al Suradi, Donglai Wei, Kun Zhang, 
+                                    <a href="https://arxiv.org/abs/2402.12706v1"> Learning Domain-Invariant Causal Temporal Dynamics for Few-Shot Action Recognition</a>,
+                                    <em> International Conference on Machine Learning (<strong>ICML</strong>)</em>, 2024.
+                                    <p></p> 
+                                </li> 
                                 <li style="margin: 5px;">
                                     <strong>Guangyi Chen</strong>*, Yuke Li*, Xiao Liu, Zijian Li, Eman Al Suradi, Donglai Wei, Kun Zhang, 
                                     <a href="https://openreview.net/pdf?id=Cu5wJa5LGO"> LLCP: Learning Latent Causal Processes for Reasoning-based Video Question Answer</a>,
@@ -1089,13 +1105,22 @@ https://templatemo.com/tm-531-reflux
                 <div class="news">
                     <p>
                         <li style="margin: 5px;">
-                            <b>TA</b> Numerical Analysis and Algorithm, Tsinghua University.
+                            <b>TA</b> Analog Electronic Technology Foundation, Tsinghua University, 2018.
                         </li>
                         <li style="margin: 5px;">
-                            <b>TA</b> Analog Electronic Technology Foundation, Tsinghua University.
+                            <b>TA</b> Analog Electronic Technology Foundation, Tsinghua University, 2019.
                         </li>
                         <li style="margin: 5px;">
-                            <b>TA</b> Probabilistic and Statistical Inference (ML703), MBZUAI.
+                            <b>TA</b> Numerical Analysis and Algorithm, Tsinghua University, 2019.
+                        </li>
+                        <li style="margin: 5px;">
+                            <b>TA</b> Probabilistic and Statistical Inference (ML703), MBZUAI，2021.
+                        </li>
+                        <li style="margin: 5px;">
+                            <b>TA</b> Probabilistic and Statistical Inference (ML703), MBZUAI，2022.
+                        </li>
+                        <li style="margin: 5px;">
+                            <b>TA</b> Advanced Probabilistic and Statistical Inference (ML803), MBZUAI，2023.
                         </li>
                     </p>
                 </div>
