--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on representation learning, video understanding, and causal reasoning.
+                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causal representation learning, attention learning, prompt learning, and video understanding.
                         </p>
                         <p>
                             Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University in 2016.
@@ -98,6 +98,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="news">
                         <p>
+                            <li style="margin: 5px;">
+                                <b>2024-06:</b> I give a talk at <a href="http://valser.org/">Valse</a> to discuss prompt learning and visual context <a href="https://chengy12.github.io/files/Prompt Learning valse talk.pdf">[slides]</a>, thanks <a href="https://www.tfzhou.com/">Prof. Tianfei Zhou</a> for the invitation!
+                            </li>
                             <li style="margin: 5px;">
                                 <b>2024-05:</b> 2 papers on causal representation learning are accepted by <a href="https://icml.cc/">ICML'2024</a>.
                             </li>
