--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2024-07:</b> Call for Papers for our <a href="https://crl-community.github.io/neurips24.html">Causal Representation Learning Workshop@NeurIPS 2024</a>: Welcome to submit your paper at <a href="https://crl-community.github.io/neurips24.html">Openreview</a>! 
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2024-07:</b> I give a talk at <a href="https://www.spco.cc/pcic/">Pacific Causal Inference Conference (PCIC)</a> about causal representation learning for video understanding <a href="https://chengy12.github.io/files/Causal Representation Learning for Video Understanding (PCIC).pdf">[slides]</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2024-06:</b> I co-orginize the <a href="https://crl-community.github.io/icdm24.html">Causal Representation Learning Workshop</a> at <a href="https://icdm2024.org/"> ICDM 2024</a>. See you at Abu Dhabi in Deceber. 
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2024-06:</b> I give a talk at <a href="http://valser.org/">Valse</a> to discuss prompt learning and visual context <a href="https://chengy12.github.io/files/Prompt Learning valse talk.pdf">[slides]</a>, thanks <a href="https://www.tfzhou.com/">Prof. Tianfei Zhou</a> for the invitation!
                             </li>
                             <li style="margin: 5px;">
