--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2024-07:</b> 1 paper on efficient generation of LLMs is accepted by <a href="https://eccv.ecva.net/">ECCV'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2024-07:</b> Call for Papers for our <a href="https://crl-community.github.io/neurips24.html">Causal Representation Learning Workshop@NeurIPS 2024</a>: Welcome to submit your paper at <a href="https://crl-community.github.io/neurips24.html">Openreview</a>! 
                             </li>
                             <li style="margin: 5px;">
