--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ https://templatemo.com/tm-531-reflux
                                 <b>2024-07:</b> 1 paper on efficient generation of LLMs is accepted by <a href="https://eccv.ecva.net/">ECCV'2024</a>.
                             </li>
                             <li style="margin: 5px;">
-                                <b>2024-07:</b> Call for Papers for our <a href="https://crl-community.github.io/neurips24.html">Causal Representation Learning Workshop@NeurIPS 2024</a>: Welcome to submit your paper at <a href="https://crl-community.github.io/neurips24.html">Openreview</a>! 
+                                <b>2024-07:</b> Call for Papers for our <a href="https://crl-community.github.io/neurips24.html">Causal Representation Learning Workshop@NeurIPS 2024</a>: Welcome to submit your paper at <a href="https://openreview.net/group?id=NeurIPS.cc/2024/Workshop/CRL">Openreview</a>! 
                             </li>
                             <li style="margin: 5px;">
                                 <b>2024-07:</b> I give a talk at <a href="https://www.spco.cc/pcic/">Pacific Causal Inference Conference (PCIC)</a> about causal representation learning for video understanding <a href="https://chengy12.github.io/files/Causal Representation Learning for Video Understanding (PCIC).pdf">[slides]</a>.
@@ -514,7 +514,7 @@ https://templatemo.com/tm-531-reflux
                                     <p></p> 
                                 </li> 
                                 <li style="margin: 5px;">
-                                    Yuke Li*, <strong>Guangyi Chen</strong>*, Xiao Liu, Zijian Li, Eman Al Suradi, Donglai Wei, Kun Zhang, 
+                                    Yuke Li*, <strong>Guangyi Chen</strong>*, Ben Abramowitz, Stefano Anzellott, Donglai Wei,
                                     <a href="https://arxiv.org/abs/2402.12706v1"> Learning Domain-Invariant Causal Temporal Dynamics for Few-Shot Action Recognition</a>,
                                     <em> International Conference on Machine Learning (<strong>ICML</strong>)</em>, 2024.
                                     <p></p> 
@@ -1129,13 +1129,16 @@ https://templatemo.com/tm-531-reflux
                             <b>TA</b> Numerical Analysis and Algorithm, Tsinghua University, 2019.
                         </li>
                         <li style="margin: 5px;">
-                            <b>TA</b> Probabilistic and Statistical Inference (ML703), MBZUAI，2021.
+                            <b>TA</b> Probabilistic and Statistical Inference (ML703), MBZUAI，2021, Fall.
                         </li>
                         <li style="margin: 5px;">
-                            <b>TA</b> Probabilistic and Statistical Inference (ML703), MBZUAI，2022.
+                            <b>TA</b> Probabilistic and Statistical Inference (ML703), MBZUAI，2022, (Spring, Fall).
                         </li>
                         <li style="margin: 5px;">
-                            <b>TA</b> Advanced Probabilistic and Statistical Inference (ML803), MBZUAI，2023.
+                            <b>TA</b> Advanced Probabilistic and Statistical Inference (ML803), MBZUAI，2023, (Spring, Fall).
+                        </li>
+                        <li style="margin: 5px;">
+                            <b>TA</b> Advanced Probabilistic and Statistical Inference (ML803), MBZUAI，2024, Spring.
                         </li>
                     </p>
                 </div>
