--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                                 <b>2023-01:</b> 2 papers on prompt learning (<a href="https://arxiv.org/abs/2210.01253">PLOT</a> as <strong>Spotlight</strong>) and video understanding are accepted by <a href="https://iclr.cc/">ICLR'2023</a>.
                             </li>
-                            <li style="margin: 5px;">
+<!--                             <li style="margin: 5px;">
                                 <b>2022-11:</b> 1 paper on domain adaptation is accepted by <a href="https://aaai.org/Conferences/AAAI-23/">AAAI'2023</a> as <strong>Oral</strong>.
                             </li>
                             <li style="margin: 5px;">
@@ -176,7 +176,7 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                                 <b>2021-07:</b> 3 paper on trajectory prediction and attention learning are accepted by <a href="http://iccv2021.thecvf.com/">ICCV'2021</a>.
                             </li>
-                            <!--                             <li style="margin: 5px;">
+                            <li style="margin: 5px;">
                                 <b>2021-03:</b> 1 paper on unintentional action localization is accepted by <a href="https://2021.ieeeicme.org/">ICME'2021</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -522,21 +522,21 @@ https://templatemo.com/tm-531-reflux
                                 <li style="margin: 5px;">
                                     <strong>Guangyi Chen</strong>*, Yuke Li*, Xiao Liu, Zijian Li, Eman Al Suradi, Donglai Wei, Kun Zhang, 
                                     <a href="https://openreview.net/pdf?id=Cu5wJa5LGO"> LLCP: Learning Latent Causal Processes for Reasoning-based Video Question Answer</a>,
-                                    <em>The Tweleveth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
+                                    <em>The Twelfth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
                                     <a href="https://github.com/CHENGY12/LLCP">[Code]</a>
                                     <p></p> 
                                 </li> 
                                 <li style="margin: 5px;">
                                     Songyao Jin, Feng Xie, <strong>Guangyi Chen</strong>, Biwei Huang, Zhengming Chen, Xinshuai Dong, Kun Zhang, 
                                     <a href="https://openreview.net/pdf?id=nHkMm0ywWm"> Structural Estimation of Partially Observed Linear Non-Gaussian Acyclic Model: A Practical Approach with Identifiability</a>,
-                                    <em>The Tweleveth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
+                                    <em>The Twelfth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
                                     <a href="https://openreview.net/attachment?id=nHkMm0ywWm&name=supplementary_material">[Code]</a>
                                     <p></p> 
                                 </li> 
                                 <li style="margin: 5px;">
                                     Longkang Li, Ignavier Ng, Gongxu Luo, Biwei Huang, <strong>Guangyi Chen</strong>, Tongliang Liu, Bin Gu, Kun Zhang, 
                                     <a href="https://openreview.net/pdf?id=m7tJxajC3G"> Federated Causal Discovery from Heterogeneous Data</a>,
-                                    <em>The Tweleveth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
+                                    <em>The Twelfth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
                                     <a href="https://github.com/lokali/FedCDH">[Code]</a>
                                     <p></p> 
                                 </li> 
