--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2024-10:</b> 3 papers on casaul representation learning and 1 paper on causal discovery are accepted by <a href="https://neurips.cc/">NeurIPS'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2024-09:</b> 1 paper on understanding LLMs's representation is accepted by <a href="https://2024.emnlp.org/">EMNLP'2024</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2024-07:</b> 1 paper on efficient generation of LLMs is accepted by <a href="https://eccv.ecva.net/">ECCV'2024</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -506,6 +512,46 @@ https://templatemo.com/tm-531-reflux
                     <div class="left">
                         <p>
                             <ul id="list">
+                                <li style="margin: 5px;">
+                                    Lingjing Kong*, <strong>Guangyi Chen</strong>*, Petar Stojanov, Haoxuan Li, Eric P. Xing, Kun Zhang,
+                                    <a href="https://openreview.net/pdf/0fb6a5a5c946d67fa93344db03a2f0084c92bd3d.pdf"> Towards Understanding Extrapolation: a Causal Lens</a>,
+                                    <em>Thirty-eighth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2024.
+                                    <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a>
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Lingjing Kong, <strong>Guangyi Chen</strong>, Biwei Huang, Eric P. Xing, Yuejie Chi, Kun Zhang,
+                                    <a href="https://arxiv.org/pdf/2406.00519"> Learning Discrete Concepts in Latent Hierarchical Models </a>,
+                                    <em>Thirty-eighth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2024.
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Xiangchen Song, Zijian Li, <strong>Guangyi Chen</strong>, Yujia Zheng, Yewen Fan, Xinshuai Dong, Kun Zhang,
+                                    <a href="https://arxiv.org/pdf/2409.03142"> Causal Temporal Representation Learning with Nonstationary Sparse Transition</a>,
+                                    <em>Thirty-eighth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2024.
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Loka Li, Haoyue Dai, Hanin Al Ghothani, Biwei Huang, Jiji Zhang, Shahar Harel, Isaac Bentwich, <strong>Guangyi Chen</strong>, Kun Zhang,
+                                    <a href="https://openreview.net/forum?id=pfvcsgFrJ6"> On Causal Discovery in the Presence of Deterministic Relations</a>,
+                                    <em>Thirty-eighth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2024.
+                                    <a href="https://github.com/lokali/DGES">[Code]</a>
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Hanqi Yan, Yanzheng Xiang, <strong>Guangyi Chen</strong>, Yifei Wang, Lin Gui, Yulan He,
+                                    <a href="https://arxiv.org/abs/2406.17969"> Encourage or Inhibit Monosemanticity? Revisit Monosemanticity from a Feature Decorrelation Perspective</a>,
+                                    <em>The 2024 Conference on Empirical Methods in Natural Language Processing (<strong>EMNLP</strong>)</em>, 2024.
+                                    <a href="https://github.com/hanqi-qi/Revisit_monosemanticity">[Code]</a>
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Zuyan Liu, Benlin Liu, Jiahui Wang, Yuhao Dong, <strong>Guangyi Chen</strong>, Yongming Rao, Ranjay Krishna, Jiwen Lu,
+                                    <a href="https://arxiv.org/pdf/2407.18121"> Efficient inference of vision instruction-following models with elastic cache</a>,
+                                    <em>Proceedings of the European Conference on Computer Vision (<strong>ECCV</strong>)</em>, 2024
+                                    <a href="https://github.com/liuzuyan/ElasticCache">[Code]</a>
+                                    <p></p> 
+                                </li> 
                                 <li style="margin: 5px;">
                                     <strong>Guangyi Chen</strong>*, Yifan Shen*, Zhenhao Chen*, Xiangchen Song, Yuewen Sun, Weiran Yao, Xiao Liu, Kun Zhang,
                                     <a href="https://arxiv.org/abs/2401.14535"> CaRiNG: Learning Temporal Causal Representation under Non-Invertible Generation Process</a>,
