--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ https://templatemo.com/tm-531-reflux
                                 <b>2024-09:</b> 1 paper on understanding LLMs's representation is accepted by <a href="https://2024.emnlp.org/">EMNLP'2024</a>.
                             </li>
                             <li style="margin: 5px;">
+                                <b>2024-09:</b> I give a talk at <a href="https://pattern.swarma.org/study_group/46">swarma(集智)</a> about causal representation learning <a href="https://chengy12.github.io/files/Causal Representation Learning.pdf">[slides]</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2024-07:</b> 1 paper on efficient generation of LLMs is accepted by <a href="https://eccv.ecva.net/">ECCV'2024</a>.
                             </li>
                             <li style="margin: 5px;">
