--- a/index.html
+++ b/index.html
@@ -569,6 +569,13 @@ https://templatemo.com/tm-531-reflux
                                     <p></p> 
                                 </li> 
                                 <li style="margin: 5px;">
+                                    Shiyi Zhang, Sule Bai, <strong>Guangyi Chen</strong>, Lei Chen, Jiwen Lu, Junle Wang, Yansong Tang,
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Zhang_Narrative_Action_Evaluation_with_Prompt-Guided_Multimodal_Interaction_CVPR_2024_paper.pdf">Narrative Action Evaluation with Prompt-Guided Multimodal Interaction</a>,
+                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2024.
+                                    <a href="https://github.com/shiyi-zh0408/NAE_CVPR2024">[Code]</a>
+                                    <p></p>
+                                </li>
+                                <li style="margin: 5px;">
                                     <strong>Guangyi Chen</strong>*, Yuke Li*, Xiao Liu, Zijian Li, Eman Al Suradi, Donglai Wei, Kun Zhang, 
                                     <a href="https://openreview.net/pdf?id=Cu5wJa5LGO"> LLCP: Learning Latent Causal Processes for Reasoning-based Video Question Answer</a>,
                                     <em>The Twelfth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2024.
