--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2025-01:</b> 4 papers on casaul representation learning are accepted by <a href="https://iclr.cc/">ICLR'2025</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2025-01:</b> 1 paper on casaul representation learning is accepted by <a href="https://www2025.thewebconf.org/">WWW'2025</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2024-10:</b> 3 papers on casaul representation learning and 1 paper on causal discovery are accepted by <a href="https://neurips.cc/">NeurIPS'2024</a>.
                             </li>
                             <li style="margin: 5px;">
@@ -639,14 +645,14 @@ https://templatemo.com/tm-531-reflux
                                 </li>
                                 <li style="margin: 5px;">
                                     <b>Guangyi Chen*</b>, Zhenhao Chen*, Shunxing Fan, Kun Zhang,
-                                    <a href="https://chengy12.github.io/files/Bosampler.pdf">Unsupervised Sampling Promoting for Stochastic Human Trajectory Prediction</a>,
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Chen_Unsupervised_Sampling_Promoting_for_Stochastic_Human_Trajectory_Prediction_CVPR_2023_paper.pdf">Unsupervised Sampling Promoting for Stochastic Human Trajectory Prediction</a>,
                                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023.
                                     <a href="https://github.com/viewsetting/Unsupervised_sampling_promoting">[Code]</a>
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
                                     Lingjing Kong*, Martin Q. Ma*, <b>Guangyi Chen</b>, Eric P. Xing, Yuejie Chi, Louis-Philippe Morency, Kun Zhang,
-                                    <a href="https://chengy12.github.io/files/mae_cvpr.pdf">Understanding Masked Autoencoders via Hierarchical Latent Variable Models</a>,
+                                    <a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Kong_Understanding_Masked_Autoencoders_via_Hierarchical_Latent_Variable_Models_CVPR_2023_paper.pdf">Understanding Masked Autoencoders via Hierarchical Latent Variable Models</a>,
                                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023, <strong style="color: #8c363e;">Highlight</strong>.
                                     <p></p>
                                 </li>
