--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@ https://templatemo.com/tm-531-reflux
                     <div class="news">
                         <p>
                             <li style="margin: 5px;">
+                                <b>2025-02:</b> 1 paper on casaul representation learning and CLIP model is accepted by <a href="https://cvpr.thecvf.com/">CVPR'2025</a>.
+                            </li>
+                            <li style="margin: 5px;">
                                 <b>2025-01:</b> 4 papers on casaul representation learning are accepted by <a href="https://iclr.cc/">ICLR'2025</a>.
                             </li>
                             <li style="margin: 5px;">
