--- a/index.html
+++ b/index.html
@@ -1268,8 +1268,30 @@ https://templatemo.com/tm-531-reflux
                             <li style="margin: 5px;">
                                 <b>Publicity Chair:</b> for CLeaR 2023.
                             </li>
+                            <!-- <li style="margin: 5px;">
+                                <b>Co-organizer:</b> The Third Workshop on Human Identification in Multimedia (HIM'19) at ICME<a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
+                                The Workshop on Causal Representation Learning at NeurIPS<a href="https://crl-community.github.io/neurips24.html"> [website]</a>
+                                The Workshop on Causal Representation Learning at ICDM<a href="https://crl-community.github.io/icdm24.html"> [website]</a>
+                            </li> -->
                             <li style="margin: 5px;">
-                                <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
+                                <b>Co-organizer:</b>
+                                <ul>
+                                    <li>
+                                        <b>The Third Workshop on Human Identification in Multimedia </b> at ICME 2019 – 
+                                        <a href="http://ivg.au.tsinghua.edu.cn/him19/">[Website]</a>
+                                    </li>
+                                    <li>
+                                        <b>The Workshop on Causal Representation Learning</b>
+                                        <ul>
+                                            <li>
+                                                NeurIPS 2024 – <a href="https://crl-community.github.io/neurips24.html">[Website]</a>
+                                            </li>
+                                            <li>
+                                                ICDM 2024 – <a href="https://crl-community.github.io/icdm24.html">[Website]</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
                             </li>
                             <li style="margin: 5px;">
                                 <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR, AAAI, and so on.
