--- a/index.html
+++ b/index.html
@@ -1275,21 +1275,15 @@ https://templatemo.com/tm-531-reflux
                             </li> -->
                             <li style="margin: 5px;">
                                 <b>Co-organizer:</b>
-                                <ul>
-                                    <li>
-                                        <b>The Third Workshop on Human Identification in Multimedia </b> at ICME 2019 – 
-                                        <a href="http://ivg.au.tsinghua.edu.cn/him19/">[Website]</a>
+                                <ul style="list-style-type: none; padding-left: 25px;">
+                                    <li style="margin: 4px;">
+                                        <b>The Third Workshop on Human Identification in Multimedia </b> at ICME 2019 – <a href="http://ivg.au.tsinghua.edu.cn/him19/">[Website]</a>
                                     </li>
-                                    <li>
-                                        <b>The Workshop on Causal Representation Learning</b>
-                                        <ul>
-                                            <li>
-                                                NeurIPS 2024 – <a href="https://crl-community.github.io/neurips24.html">[Website]</a>
-                                            </li>
-                                            <li>
-                                                ICDM 2024 – <a href="https://crl-community.github.io/icdm24.html">[Website]</a>
-                                            </li>
-                                        </ul>
+                                    <li style="margin: 4px;">
+                                        <b>The Workshop on Causal Representation Learning</b> at NeurIPS 2024 – <a href="https://crl-community.github.io/neurips24.html">[Website]</a>
+                                    </li>
+                                    <li style="margin: 4px;">
+                                        <b>The Workshop on Causal Representation Learning</b> at ICDM 2024 – <a href="https://crl-community.github.io/icdm24.html">[Website]</a>
                                     </li>
                                 </ul>
                             </li>
