--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            I am currently a Postdoctoral Research Fellow in MBZUAI and CMU, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causal representation learning, attention learning, prompt learning, and video understanding.
+                            I am currently the group leader and research scientist of the CLeaR group at both CMU and MBZUAI, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causal representation learning, attention learning, prompt learning, and video understanding.
                         </p>
                         <p>
                             Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University in 2016.
@@ -525,6 +525,47 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             <ul id="list">
                                 <li style="margin: 5px;">
+                                    Shaoan Xie, Lingjing Kong, Yujia Zheng, Yu Yao, Zeyu Tang, Eric P. Xing, <strong>Guangyi Chen</strong>, Kun Zhang,
+                                    <a href="https://openreview.net/pdf?id=FR0uXCjUT6"> SmartCLIP: Modular Vision-language Alignment with Identification Guarantees</a>,
+                                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2025.
+                                    <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Yuewen Sun*, Lingjing Kong*, <strong>Guangyi Chen</strong>, Loka Li, Gongxu Luo, Zijian Li, Yixuan Zhang, Yujia Zheng, Mengyue Yang, Petar Stojanov, Eran Segal, Eric P Xing, Kun Zhang,
+                                    <a href="https://arxiv.org/pdf/2411.06518"> Causal Representation Learning from Multimodal Biological Observations</a>,
+                                    <em>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025.
+                                    <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Zijian Li, Yifan Shen, Kaitao Zheng, Ruichu Cai, Xiangchen Song, Mingming Gong, <strong>Guangyi Chen</strong>, Kun Zhang,
+                                    <a href="https://arxiv.org/pdf/2405.15325"> On the Identification of Temporal Causal Representation with Instantaneous Dependence</a>,
+                                    <em>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025, <strong style="color: #8c363e;">Oral</strong>.
+                                    <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Zijian Li, Shunxing Fan, Yujia Zheng, Ignavier Ng, Shaoan Xie, <strong>Guangyi Chen</strong>, Xinshuai Dong, Ruichu Cai, Kun Zhang,
+                                    <a href="https://arxiv.org/abs/2503.00639"> Synergy Between Sufficient Changes and Sparse Mixing Procedure for Disentangled Representation Learning</a>,
+                                    <em>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025.
+                                    <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Yuke Li, Yujia Zheng, <strong>Guangyi Chen</strong>, Kun Zhang, Heng Huang,
+                                    <a href="https://openreview.net/pdf?id=6Pz7afmsOp"> Identification of Intermittent Temporal Latent Process</a>,
+                                    <em>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025.
+                                    <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
+                                    Ruichu Cai, Zhifan Jiang, Kaitao Zheng, Zijian Li, Weilin Chen, Xuexin Chen, Yifan Shen, <strong>Guangyi Chen</strong>, Zhifeng Hao, Kun Zhang,
+                                    <a href="https://arxiv.org/abs/2405.16083"> Learning Disentangled Representation for Multi-Modal Time-Series Sensing Signals</a>,
+                                    <em>Proceedings of the ACM Web Conference (<strong>WWW</strong>)</em>, 2025.
+                                    <p></p> 
+                                </li> 
+                                <li style="margin: 5px;">
                                     Lingjing Kong*, <strong>Guangyi Chen</strong>*, Petar Stojanov, Haoxuan Li, Eric P. Xing, Kun Zhang,
                                     <a href="https://openreview.net/pdf/0fb6a5a5c946d67fa93344db03a2f0084c92bd3d.pdf"> Towards Understanding Extrapolation: a Causal Lens</a>,
                                     <em>Thirty-eighth Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2024.
@@ -659,6 +700,12 @@ https://templatemo.com/tm-531-reflux
                                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2023, <strong style="color: #8c363e;">Highlight</strong>.
                                     <p></p>
                                 </li>
+                                <li style="margin: 5px;">
+                                    Tianjun Yao, Jiaqi Sun, Defu Cao, Kun Zhang, <b>Guangyi Chen</b>,
+                                    <a href="https://dl.acm.org/doi/pdf/10.1145/3589334.3645542"> MuGSI: Distilling GNNs with Multi-Granularity Structural Information for Graph Classification</a>,
+                                    <em>Proceedings of the ACM Web Conference (<strong>WWW</strong>)</em>, 2024.
+                                    <p></p> 
+                                </li> 
                                 <li style="margin: 5px;">
                                     Sheng Zhang, Salman Khan, Zhiqiang Shen, Muzammal Naseer, <b>Guangyi Chen</b>, Fahad Khan, 
                                     <a href="https://arxiv.org/pdf/2212.05590.pdf">PromptCAL: Contrastive Affinity Learning via Auxiliary Prompts for Generalized Novel Category Discovery</a>,
