--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ https://templatemo.com/tm-531-reflux
                 </li> -->
                         </ul>
                     </div>
-                    <div class="copyright-text">
+<!--                     <div class="copyright-text">
                         <p>Copyright 2019 Reflux Design</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -88,8 +88,10 @@ https://templatemo.com/tm-531-reflux
                         <p>
                             Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University in 2016.
                         </p>
+
                         <p>
-                            Feel free to drop me an e-mail <a href="mailto:guangyichen1994@gmail.com"> guangyichen1994(at)gmail.com </a>, if you are interested in our research and want to discuss relevant research topics or potential collaborations.
+                            <b> I’m currently on the academic job market!</b>
+                            If you’re interested in my research and believe I could be a strong addition to your department, I’d be glad to connect. Please don’t hesitate to reach out by dropping me an e-mail <a href="mailto:guangyichen1994@gmail.com"> guangyichen1994(at)gmail.com </a>.
                         </p>
                     </div>
                 </div>
@@ -98,6 +100,12 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="news">
                         <p>
+                            <li style="margin: 5px;">
+                                <b>2025-03:</b> SmartCLIP is selected as <b>Highlight </b> by <a href="https://cvpr.thecvf.com/">CVPR'2025</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2025-02:</b> IDOL is selected as <b>Oral </b> by <a href="https://iclr.cc/">ICLR'2025</a>.
+                            </li>
                             <li style="margin: 5px;">
                                 <b>2025-02:</b> 1 paper on casaul representation learning and CLIP model is accepted by <a href="https://cvpr.thecvf.com/">CVPR'2025</a>.
                             </li>
@@ -539,21 +547,21 @@ https://templatemo.com/tm-531-reflux
                                     <p></p> 
                                 </li> 
                                 <li style="margin: 5px;">
-                                    Zijian Li, Yifan Shen, Kaitao Zheng, Ruichu Cai, Xiangchen Song, Mingming Gong, <strong>Guangyi Chen</strong>, Kun Zhang,
+                                    Zijian Li*, Yifan Shen*, Kaitao Zheng, Ruichu Cai, Xiangchen Song, Mingming Gong, <strong>Guangyi Chen</strong>, Kun Zhang,
                                     <a href="https://arxiv.org/pdf/2405.15325"> On the Identification of Temporal Causal Representation with Instantaneous Dependence</a>,
                                     <em>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025, <strong style="color: #8c363e;">Oral</strong>.
                                     <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
                                     <p></p> 
                                 </li> 
                                 <li style="margin: 5px;">
-                                    Zijian Li, Shunxing Fan, Yujia Zheng, Ignavier Ng, Shaoan Xie, <strong>Guangyi Chen</strong>, Xinshuai Dong, Ruichu Cai, Kun Zhang,
+                                    Zijian Li*, Shunxing Fan*, Yujia Zheng, Ignavier Ng, Shaoan Xie, <strong>Guangyi Chen</strong>, Xinshuai Dong, Ruichu Cai, Kun Zhang,
                                     <a href="https://arxiv.org/abs/2503.00639"> Synergy Between Sufficient Changes and Sparse Mixing Procedure for Disentangled Representation Learning</a>,
                                     <em>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025.
                                     <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
                                     <p></p> 
                                 </li> 
                                 <li style="margin: 5px;">
-                                    Yuke Li, Yujia Zheng, <strong>Guangyi Chen</strong>, Kun Zhang, Heng Huang,
+                                    Yuke Li*, Yujia Zheng*, <strong>Guangyi Chen</strong>, Kun Zhang, Heng Huang,
                                     <a href="https://openreview.net/pdf?id=6Pz7afmsOp"> Identification of Intermittent Temporal Latent Process</a>,
                                     <em>The Thirteenth International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2025.
                                     <!-- <a href="https://github.com/Lingjing-Kong/extrapolation_experiments">[Code]</a> -->
@@ -721,7 +729,7 @@ https://templatemo.com/tm-531-reflux
                                     <p></p>
                                 </li>
                                 <li style="margin: 5px;">
-                                    Junlong Li*, <b>Guangyi Chen*</b>, Yansong Tang, Jinan Bao, Kun Zhang, Jie Zhou, Jiwen Lu,
+                                    Junlong Li*, <b>Guangyi Chen</b>, Yansong Tang, Jinan Bao, Kun Zhang, Jie Zhou, Jiwen Lu,
                                     <a href="https://openreview.net/forum?id=RlPmWBiyp6w">GAIN: On the Generalization of Instructional Action Understanding</a>,
                                     <em>The Eleventh International Conference on Learning Representations (<strong>ICLR</strong>)</em>, 2023.
                                     <a href="https://drive.google.com/drive/folders/1FDPUFA9fRA-15oeOztYuOAqcWexFyk_T?usp=sharing">[Dataset]</a>
