update talks news and introduction

--- a/index.html
+++ b/index.html
@@ -83,12 +83,8 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="left">
                         <p>
-                            I am currently the group leader and research scientist of the CLeaR group at both CMU and MBZUAI, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causal representation learning, attention learning, prompt learning, and video understanding.
+                            I am a postdoctoral research fellow at CMU and a research scientist at MBZUAI. I currently co-lead the Causal Learning and Reasoning (CLeaR) Group with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. Prior to that, I received both my Ph.D. and B.S. degrees from Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. My research interests include causality, representation learning, and computer vision. A central focus of my current work is to develop principled and practical methods for learning meaningful visual representations that support recognization, understanding, generation, and reasoning.
                         </p>
-                        <p>
-                            Prior to that, I received my Ph.D degree at Tsinghua University in 2021, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>; and obtained B.Eng. at Tsinghua University in 2016.
-                        </p>
-
                         <p>
                             <b> I’m currently on the academic job market!</b>
                             If you’re interested in my research and believe I could be a strong addition to your department, I’d be glad to connect. Please don’t hesitate to reach out by dropping me an e-mail <a href="mailto:guangyichen1994@gmail.com"> guangyichen1994(at)gmail.com </a>.
@@ -100,6 +96,15 @@ https://templatemo.com/tm-531-reflux
                     <div class="line-dec"></div>
                     <div class="news">
                         <p>
+                            <li style="margin: 5px;">
+                                <b>2025-05:</b> 3 papers on demonstating causal representation learning and causal lens in Diffusion model, LLM, and domain adaptation are accepted by <a href="https://icml.cc/">ICML'2025</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2025-04:</b> I give a talk at <a href="https://www.nus.edu.sg/">NUS</a> to discuss causal representation <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>, thanks <a href="https://www.comp.nus.edu.sg/~xiaoxk/">Prof. Xiaokui Xiao</a> to host me!
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2025-04:</b> I give a talk at <a href="https://www.ntu.edu.sg/">NTU</a> to discuss causal representation in visual understaning <a href="https://chengy12.github.io/files/Talk_CRL_in_Vision.pptx">[slides]</a>[slides]</a>, thanks <a href="https://dr.ntu.edu.sg/cris/rp/rp02343">Prof. Dacheng Tao</a> for the invitation!
+                            </li>
                             <li style="margin: 5px;">
                                 <b>2025-03:</b> SmartCLIP is selected as <b>Highlight </b> by <a href="https://cvpr.thecvf.com/">CVPR'2025</a>.
                             </li>
